--- a/MainAPI/appsettings.json
+++ b/MainAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultString": "Data Source=DatingApp.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
