--- a/MainAPI/appsettings.json
+++ b/MainAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "you_will_going_to_type_a_secret_key" 
+  }, 
   "ConnectionStrings": {
     "DefaultString": "Data Source=DatingApp.db"
   },
