--- a/MainAPI/MainAPI.csproj
+++ b/MainAPI/MainAPI.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
+	  <UserSecretsId>a198ca6c-2056-413e-b326-26faf5cd4025</UserSecretsId>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
